Avoided zoom out on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,12 @@
   font-family: spartan;
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
+}
+
 html{
   scroll-behavior: smooth;
 }
